--- a/info_even1.html
+++ b/info_even1.html
@@ -12,7 +12,7 @@
         <?php include("entete.php") ?>
 	
 	   <!-- <nav>
-            <ul id="menu"> <!-- en tete  -->
+            <ul id="menu"> 
                 <span class="evt"><li> <a href="Evènement.html"> <h2>Evènements </h2> </a> </li></span>
                 <li> <a href="agenda.html"> <h2> Agenda </h2> </a> </li> 
                 <li> <a href="creer.html"> <h2>Créer</h2> </a></li>
