--- a/info_even2.html
+++ b/info_even2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" /> <!--Clavier et caractères Latin européen-->
         <link rel="stylesheet" href="info_event2.css" /> 
-        <title> 007 Spectre </title>
+        <title>Even Out</title>
     </head>
 
     <body>
